add_executable(main main.cpp)
add_executable(test test.cpp)
add_definitions(" -D__CYME_SIMD_VALUE__=${SIMD_TECH}")

set(LIBRAIRIES ${MASS_LIBRARY} ${SIMD_MASS_LIBRARY})
#set(LIBRAIRIES  ${SIMD_MASS_LIBRARY})

if(CYME_MATH)
    target_link_libraries(main ${LIBRAIRIES} ${Boost_CHRONO_LIBRARY} ${Boost_SYSTEM_LIBRARY}  )
    target_link_libraries(test ${LIBRAIRIES} ${Boost_CHRONO_LIBRARY} ${Boost_SYSTEM_LIBRARY}  )
else(CYME_MATH)
    target_link_libraries(main ${Boost_CHRONO_LIBRARY} ${Boost_SYSTEM_LIBRARY}  )
    target_link_libraries(test ${Boost_CHRONO_LIBRARY} ${Boost_SYSTEM_LIBRARY}  )
 #   target_link_libraries(main)
endif(CYME_MATH)
